--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
-<!doctype html>
+<doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!-- <script src='https://api.mapbox.com/mapbox-gl-js/v0.33.0/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v0.33.0/mapbox-gl.css' rel='stylesheet' /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,4 +30,6 @@
       To create a production bundle, use `npm run build`.
     -->
   </body>
+
+
 </html>
